# MAGE

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  setup.py  testbench_generate.ipynb
sim/: sim_golden.vvp
sim/obj_dir/: LLMGuidance.d  Vtop__ALL.cpp  Vtop___024root.h  Vtop___024root__DepSet_h4b98a05d__0__Slow.cpp  Vtop___024root__Slow.cpp  sim-main.d  verilated_threads.d
src/: __init__.py
src/mage/: bash_tools.py  rtl_editor.py  sim_judge.py  tb_generator.py  token_counter.py
src/mage/converage/: LLMGuidance.cpp  LLMGuidance4CodeCov.cpp  LLMGuidance4CodeCov.h  RunGPT.py
src/mage_rtl/: agent.py  benchmark_read_helper.py  gen_config.py  prompts.py  rtl_generator.py  sim_reviewer.py  tb_generator.py  token_counter.py  utils.py
src/mage_rtl/converage/: LLMGuidance.cpp  LLMGuidance.h  RunGPT.py
src/sim/: Makefile  top.sv
src/sim/obj_dir/: LLMGuidance4CodeCov.d  Vtop  Vtop.cpp  Vtop.h  Vtop.mk  Vtop__ALL.d  Vtop__Syms.h  Vtop___024root__DepSet_h4b98a05d__0.cpp  Vtop___024root__DepSet_h6944321b__0.cpp  Vtop___024root__DepSet_h6944321b__0__Slow.cpp  Vtop__ver.d  Vtop_classes.mk  rfuzz-harness.d  verilated.d  verilated_cov.d
tests/: test_llm_chat.py  test_rtl_generator.py  test_single_agent.py  test_top_agent.py
